Adds the build task

--- a/src/partials/_header.html
+++ b/src/partials/_header.html
@@ -9,7 +9,9 @@
     <!-- build:js assets/js/modernizr.js -->
     <script src="../src/assets/js/libs/modernizr.js"></script>
     <!-- endbuild -->
+    <!-- build:js assets/css/styles.min.css -->
     <link rel="stylesheet" href="assets/css/styles.css">
+    <!-- endbuild -->
 </head>
 
 
