Fixes the build bugs, adds the isBuild template var

--- a/src/partials/_footer.html
+++ b/src/partials/_footer.html
@@ -1,4 +1,4 @@
-    <!-- build:js assets/js/main.js -->
+    <!-- build:js assets/js/main.min.js -->
     <script src="../src/assets/js/main.js"></script>
     <!-- endbuild -->
 
