--- a/src/partials/_header.html
+++ b/src/partials/_header.html
@@ -6,12 +6,14 @@
     <title>Gsetup</title>
     <meta name="description" content="A powerful gulp setup for web development">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- build:js assets/js/modernizr.js -->
+    <!-- build:js assets/js/modernizr.min.js -->
     <script src="../src/assets/js/libs/modernizr.js"></script>
     <!-- endbuild -->
-    <!-- build:js assets/css/styles.min.css -->
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <!-- endbuild -->
+
+    <%
+    var style = isBuild ? 'styles.min.css' : 'styles.css';
+    %>
+    <link rel="stylesheet" href="assets/css/<%= style %>">
 </head>
 
 
