Adds normalize.css as an included lib

--- a/src/assets/scss/_generic.scss
+++ b/src/assets/scss/_generic.scss
@@ -1,10 +1,7 @@
 //
 // Generic
 // -----
-// Ground zero styles (Normalize.css, resets, box-sizing
+// Ground zero styles (Normalize.css, resets, box-sizing)
 //
 
-h1 {
-    text-align: center;
-    text-transform: uppercase;
-}
+@import "libs/normalize/normalize";
