--- a/src/assets/scss/_tools.scss
+++ b/src/assets/scss/_tools.scss
@@ -8,3 +8,21 @@
 @import "fonts/fonts";
 
 
+@mixin clearfix() {
+    &:after,
+    &:before {
+        content: '';
+        display: table;
+    }
+    &:after {
+        clear: both;
+    }
+}
+
+@mixin text-overflow() {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+}
+
