--- a/src/assets/scss/_trumps.scss
+++ b/src/assets/scss/_trumps.scss
@@ -4,7 +4,26 @@
 // Helpers and overrides
 //
 
+.pull-right {
+    float: right;
+}
 
+.pull-left {
+    float: left;
+}
 
+.text-center {
+    text-align: center;
+}
 
+.text-right {
+    text-align: right;
+}
 
+.text-left {
+    text-align: left;
+}
+
+.hidden, [hidden] {
+    display: none !important;
+}
